--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
-<script src="dist/cd-ondemand-min.js"></script>
-<script src="dist/cd-ondemand-templates-min.js"></script>
+<script src="cd-ondemand-min.js"></script>
+<script src="cd-ondemand-templates-min.js"></script>
 <script>
   // example for Rams staging
   // Change url and site id as in implentation.html for production environment
