--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>BIDCX Widget</title>
-	<link rel="stylesheet" href="dist/cd-ondemand.css">
+	<link rel="stylesheet" href="cd-ondemand.css">
 </head>
 <body>
 
