--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>BIDCX Widget</title>
-	<link rel="stylesheet" href="cd-ondemand.css">
+	<link rel="stylesheet" href="./cd-ondemand.css">
 </head>
 <body>
 
@@ -13,8 +13,8 @@
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
-<script src="cd-ondemand-min.js"></script>
-<script src="cd-ondemand-templates-min.js"></script>
+<script src="./cd-ondemand-min.js"></script>
+<script src="./cd-ondemand-templates-min.js"></script>
 <script>
   // example for Rams staging
   // Change url and site id as in implentation.html for production environment
