--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<title>BIDCX Widget</title>
 	<link rel="stylesheet" href="./cd-ondemand.css">
+	 <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
 </head>
 <body>
 
